@@ -7,3 +7,8 @@
 # you should have received as part of this distribution.
 
 from couchdb.client import *
+
+try:
+    __version__ = __import__('pkg_resources').get_distribution('CouchDB').version
+except ImportError:
+    __version__ = '?'
